@@ -18,6 +18,7 @@ t/99_errors.t
 t/pod.t
 
 # Module::Install extensions
+inc/File/Slurp.pm
 inc/Module/AutoInstall.pm
 inc/Module/Install.pm
 inc/Module/Install/AutoLicense.pm
